--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .DS_Store
-.client/node_modules
-.client/package-lock.json
-.client/dist
-.christianmartorano.github.io
-.server/node_modules
+node_modules/
+.package-lock.json
+dist/
+christianmartorano.github.io/
