--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
-node_modules/
+client/node_modules/
 .package-lock.json
-dist/
+client/dist/
 christianmartorano.github.io/
+.vscode/
+server/node_modules/
